--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,8 @@
 .container {
-  max-width: 800px;
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
-  padding: 20px;
+  padding: 200px;
   background-color: #d1e9fc;
   border-radius: 10px;
   box-shadow: 0px 4px 6px rgba(214, 198, 198, 0.1);
